--- a/CSS/index.css
+++ b/CSS/index.css
@@ -254,13 +254,11 @@ body {
 .carousel {
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
   height: 500px;
   position: relative;
-  overflow: hidden;
+  overflow-x: auto;
   margin-top: 16px;
+  scroll-snap-type: x mandatory;
 }
 @media (min-width: 1200px) {
   .carousel {
@@ -298,7 +296,15 @@ body {
   right: 25px;
   transform: translate(0, -50%);
 }
-.carousel img {
+.carousel .photo {
+  flex-shrink: 0;
+  height: 500px;
+  width: auto;
+}
+.carousel .hidden {
+  width: 0px;
+}
+.carousel .active {
   width: 100%;
-  display: none;
+  display: block;
 }
