--- a/CSS/index.css
+++ b/CSS/index.css
@@ -256,7 +256,7 @@ body {
   display: flex;
   height: 500px;
   position: relative;
-  overflow-x: auto;
+  overflow: hidden;
   margin-top: 16px;
   scroll-snap-type: x mandatory;
 }
@@ -290,19 +290,39 @@ body {
   top: 50%;
   left: 25px;
   transform: translate(0, -50%);
+  transition-duration: 0.2s;
+  z-index: 2;
 }
 .carousel .right-button {
   top: 50%;
   right: 25px;
   transform: translate(0, -50%);
+  transition-duration: 0.2s;
+  z-index: 2;
 }
 .carousel .photo {
-  flex-shrink: 0;
-  height: 500px;
-  width: auto;
+  width: 100%;
 }
 .carousel .hidden {
-  width: 0px;
+  display: none;
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+  }
+  to {
+    margin-left: 0%;
+  }
+}
+@keyframes slideout {
+  from {
+    width: 100%;
+    z-index: 1;
+  }
+  to {
+    width: 0%;
+    z-index: -1;
+  }
 }
 .carousel .active {
   width: 100%;
