--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -3,7 +3,7 @@
   display: flex;
   height: 500px;
   position: relative;
-  overflow-x: auto;
+  overflow: hidden;
   margin-top: 16px;
   scroll-snap-type: x mandatory;
   @media(min-width: 1200px){
@@ -29,23 +29,54 @@
     top: 50%; 
     left: 25px;
     transform: translate(0, -50%);
+    transition-duration: 0.2s;
+    z-index: 2;
   }
   .right-button {
     top: 50%; 
     right: 25px;
     transform: translate(0, -50%);
+    transition-duration: 0.2s;
+    z-index: 2;
   }
 
-  .photo{
-    flex-shrink: 0;
-    height: 500px;
-    width: auto;
+  .photo {
+    width: 100%;
   }
 
   .hidden {
-    width: 0px;
+   display: none;
   }
+
   
+
+
+
+
+
+  
+  @keyframes slidein{
+    from {
+      margin-left: 100%;
+      
+    }
+    to {
+      margin-left: 0%;
+      
+    }
+  }
+
+@keyframes slideout {
+  from{
+    width:100%;
+    z-index: 1;
+  }
+  to {
+    width: 0%;
+    z-index: -1;
+  }
+}
+
   .active{
     .width-100();
     display: block;
